--- a/sample.html
+++ b/sample.html
@@ -7,9 +7,18 @@
         <meta name="viewport" content="width=device-width">
         <script src="js/toggle-menu.js"></script>
         <link href="css/common.css" rel="stylesheet" >
+        <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
 
     <body>
-        
+        <header class="header">
+            <div class="header-inner">
+                <a class="header-logo" href="index.html">
+                    <img src="images/common/logo.png" alt="ロゴ">
+                </a>
+            </div>
+        </header>
+        <main class="main"></main>
+        <footer class="footer"></footer>
     </body>
 </html>
