--- a/sample.html
+++ b/sample.html
@@ -1,24 +1,92 @@
+研究開発リテラシー (Aクラス)
+第07回講義資料
+第07回講義資料
+米澤弘毅
+•
+5月24日 （最終編集: 12:27）
+進捗状況の記録
+
+https://docs.google.com/spreadsheets/d/1bzccAoWDWFWz5imSXsStYpjXCt-akGwrjwWsCaurhIw/edit?usp=sharing
+
+07.pptx
+PowerPoint
+
+07-00.html
+HTML
+
+07-01.html
+HTML
+
+07-02.html
+HTML
+
+07-03.html
+HTML
+
+07-04.html
+HTML
+
+07-05.html
+HTML
+
+logo_footer.png
+画像
+
+logo.png
+画像
+クラスのコメント
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>名城大学情報工学部 非公式HP</title>
+        <title>名城大学情報工学部非公式HP</title>
         <meta name="description" content="ページの概要">
         <meta name="viewport" content="width=device-width">
         <script src="js/toggle-menu.js"></script>
-        <link href="css/common.css" rel="stylesheet" >
+        <link href="css/common.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
 
     <body>
+        <!--header ここから-->
         <header class="header">
             <div class="header-inner">
                 <a class="header-logo" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
+                <button class="toggle-menu-button"></button>
+                <div class="header-site-menu">
+                    <nav class="site-menu">
+                        <ul>
+                            <li><a href="concept.html">コンセプト</a></li>
+                            <li><a href="members.html">メンバー</a></li>
+                            <li><a href="access.html">アクセス</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
+        <!--header ここまで-->
+
+        <!--main ここから-->
         <main class="main"></main>
-        <footer class="footer"></footer>
+        <!--main ここまで-->
+
+        <footer class="footer">
+            <div class="header-site-menu">
+                <nav class="site-menu">
+                    <ul>
+                        <li><a href="concept.html">コンセプト</a></li>
+                        <li><a href="members.html">メンバー</a></li>
+                        <li><a href="access.html">アクセス</a></li>
+                    </ul>
+                </nav>
+                <a class="footer-logo" href="index.html">
+                    <img src="images/common/logo-footer.png" alt="ロゴ">
+                </a>
+                <p class="copyright"><small>&copy;名城大学情報工学部(嘘)</small></p>
+            </div>
+        </footer>
     </body>
 </html>
