cssファイル書き換え

--- a/sample.html
+++ b/sample.html
@@ -14,7 +14,7 @@
     <body>
         <!--header ここから-->
         <header class="header">
-            <div class="header-inner">
+            <div class="header-logo">
                 <a class="header-logo" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
