--- a/sample.html
+++ b/sample.html
@@ -9,13 +9,15 @@
         <script src="js/toggle-menu.js"></script>
         <link href="css/common.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <linl rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href=""https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <!--header ここから-->
         <header class="header">
-            <div class="header-logo">
-                <a class="header-logo" href="index.html">
+            <div class="header-inner">
+                <a class="header-inner" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
                 <button class="toggle-menu-button"></button>
