--- a/sample.html
+++ b/sample.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="header-inner">
+            <div class="header-logo">
                 <a class="header-inner" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
