--- a/sample.html
+++ b/sample.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         <header class="header">
-            <div class="header-logo">
-                <a class="header-inner" href="index.html">
+            <div class="header-inner">
+                <a class="header-logo" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
                 <button class="toggle-menu-button"></button>
