--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="first-view-text">
                     <h1>名城大学情報工学部</h1>
                     <p>想像以上を，創造しよう．</p>
-                <div class="read">
+                <div class="lead">
                 うわぁぁぁぁぁぁぁぁぁぁぁぁぁぁぁ
                 </div>
                 </div>
