--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>名城大学情報工学部非公式HP</title>
-        <meta name="description" content="ページの概要">
+        <meta name="description" content="名城大学情報工学部非公式HP">
         <meta name="viewport" content="width=device-width">
         <script src="js/toggle-menu.js"></script>
         <link href="css/index.css" rel="stylesheet">
