全角から半角に訂正

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </div>
         </header>
         <main class="main">
-            <nav class=“floating”>
+            <nav class="floating">
                 <ul>
-                    <li><a href=“#”>トップ</a></li>
+                    <li><a href="#">トップ</a></li>
                 </ul>
             </nav>
             <div class="first-view">
