--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">    
     </head>
-    <body>
+    <body style>
         <header class="header">
             <div class="header-inner">
                 <a class="header-logo" href="index.html">
