--- a/members.html
+++ b/members.html
@@ -1,57 +1,3 @@
-回講義資料
-米澤弘毅
-•
-昨日 （最終編集: 14:15）
-進捗状況報告用spreadsheet
-
-
-https://docs.google.com/spreadsheets/d/1TqjHid2SLNi7QJQwpWUhk5ypJR2MqxUzBNXkDLZze0Y/edit?usp=sharing
-
-11.pptx
-PowerPoint
-
-11-00-sample.html
-HTML
-
-11-01-members.html
-HTML
-
-11-02-members.html
-HTML
-
-11-03-members.html
-HTML
-
-11-07-access.html
-HTML
-
-11-08-access.html
-HTML
-
-11-04-members.css
-スタイルシート
-
-11-05-members.css
-スタイルシート
-
-11-06-members.css
-スタイルシート
-
-11-09-access.css
-スタイルシート
-
-member_B.png
-画像
-
-member_C.png
-画像
-
-member_A.png
-画像
-クラスのコメント
-
-クラスのコメントを追加…
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -94,25 +40,25 @@ member_A.png
                     <img src="images/members/member_A.png" alt="メンバーA">
                     <dd>
                         <dt>メンバーA</dt>
+                        <dd>研究テーマ: コンピュータグラフィックス</dd>
+                    </dd>
+                    <p class="speciality">専門分野: CG/HI/画像処理</p>    
+                </li>
+                <li>
+                    <img src="images/members/member_B.png" alt="メンバーB">
+                    <dd>
+                        <dt>メンバーB</dt>
                         <dd>研究テーマ: 自然言語処理</dd>
                     </dd>
                     <p class="speciality">専門分野: 自然言語処理</p>    
                 </li>
                 <li>
-                    <img src=“images/members/member_B.png” alt=“メンバーB”>
-                    <dl>
-                        <dt>メンバーB</dt>
-                        <dd>研究テーマ: コンピュータグラフィックス</dd>
-                    </dl>
-                    <p class=“speciality”>専門分野: CG/HI/画像処理</p>
-                    </li>
-                    <li>
-                    <img src=“images/members/member_C.png” alt=“メンバーC”>
-                    <dl>
+                    <img src="images/members/member_C.png" alt="メンバーC">
+                    <dd>
                         <dt>メンバーC</dt>
                         <dd>研究テーマ: バーチャルリアリティ</dd>
-                    </dl>
-                    <p class=“speciality”>専門分野: VR/五感インタフェース</p>
+                    </dd>
+                    <p class="speciality">専門分野: VR/五感インタフェース</p>    
                 </li>
             </ul>
         </main>
