access.htmlの書き換え

--- a/access.html
+++ b/access.html
@@ -36,7 +36,7 @@
             </div>
             <div class="map">
                 <h2>アクセスマップ</h2>
-                <iframe src="..." https://goo.gl/maps/xbTfedXY3XCCpkLG8 style="border:0;" ...></iframe>
+                <iframe src="https://goo.gl/maps/xbTfedXY3XCCpkLG8"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
         <footer class="footer">
