--- a/access.html
+++ b/access.html
@@ -36,7 +36,7 @@
             </div>
             <div class="map">
                 <h2>アクセスマップ</h2>
-                <iframe src="https://goo.gl/maps/xbTfedXY3XCCpkLG8"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.8455689744196!2d136.97291847429182!3d35.135527172768214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60037ad6985ff6bb%3A0x23539e4812bdd380!2z5ZCN5Z-O5aSn5a2mIOWkqeeZveOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1687503252987!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
         <footer class="footer">
