--- a/members.html
+++ b/members.html
@@ -58,7 +58,7 @@
                         <dt>メンバーC</dt>
                         <dd>研究テーマ: バーチャルリアリティ</dd>
                     </dd>
-                    <p class="speciality">専門分野: VR/五感インタフェース</p>    
+                    <p class="speciality">専門分野: VR//五感インタフェース</p>    
                 </li>
             </ul>
         </main>
